docs: switch 표현식

--- a/C#/01 : 제어문.md
+++ b/C#/01 : 제어문.md
@@ -31,20 +31,14 @@ else
 
 <br>   
 
-<mark>사용자로부터 월(月)을 입력받아 어떤 계절인지 출력하려면?</mark>
+<mark>사용자로부터 월(month)을 올바르게 입력받았다.</mark>
+
+<mark>해당하는 계절(season)을 출력하려면?</mark>
 
 <br>   
 
 ```csharp
-Console.Write("월(1~12)을 입력하세요 : ");
-
-if(!int.TryParse(Console.ReadLine(), out int month))
-{
-    Console.WriteLine("월(1~12)을 입력하세요.");
-    return;
-}
-
-string? season = null;
+string season;
 
 switch(month)
 {
@@ -57,42 +51,25 @@ switch(month)
     case 6: case 7: case 8:
         season = "여름";
         break;
-    case 9: case 10: case 11:
-        season = "가을";
-        break;
     default:
-        Console.WriteLine("잘못된 입력입니다.");
-        break;        
+        season = "가을";
+        break;      
 }
 
-if (season != null)
-    Console.WriteLine($"{month}월은 {season}입니다.");
+Console.WriteLine($"{month}월은 {season}입니다.");
 ```
 
 <br>   
 <br>   
 <br>   
 
-<mark>사용자로부터 점수를 입력받아 학점을 출력하려면?</mark>
+<mark>사용자로부터 점수(score)를 올바르게 입력받았다. </mark>
+
+<mark>해당하는 학점(grade)을 출력하려면? </mark>
 
 <br>   
 
 ```csharp
-Console.Write("점수를 입력하세요 : ");
-
-
-if(!int.TryParse(Console.ReadLine(), out int score))
-{
-    Console.WriteLine("숫자를 입력하세요.");
-    return;
-}
-
-if (score > 100 || score < 0)
-{
-    Console.WriteLine("유효하지 않은 점수입니다.");
-    return;
-}
-
 string grade;
 
 switch (score)
@@ -117,3 +94,51 @@ Console.WriteLine(grade + "학점입니다.");
 <br>   
 
 ✅ switch 문에서 when 키워드를 사용하면 추가적인 조건을 검사할 수 있음.
+
+<br>   
+<br>   
+<br>   
+<br>   
+
+## [C# 8.0] switch 식
+
+<br>   
+
+<mark> 회원의 포인트(point)를 올바르게 입력받았다. 해당하는 등급(membership)을 출력하려면?</mark>
+
+<mark> (1) 10만점 이상은 VIP. (2) 6만점 이상은 Gold. (3) 3만점 이상은 Silver. (4) 그 외는 Basic. </mark>
+
+<br>   
+
+```csharp
+string membership = point switch
+{
+    >= 100000 => "Vip",
+    >= 60000 => "Gold",
+    >= 30000 => "Silver",
+    _ => "Basic"
+};
+
+Console.WriteLine($"{membership} 등급입니다.");
+
+Console.ReadKey();
+```   
+
+<br>   
+<br>   
+
+<mark>월(month), 윤년 정보(isLeapYear)가 주어졌을 때, 해당 월의 마지막 날짜를 출력하려면?</mark>
+
+<br>   
+
+```csharp
+int daysOfMonth = month switch
+{
+    1 or 3 or 5 or 7 or 8 or 10 or 12 => 31,
+    4 or 6 or 9 or 11 => 30,
+    2 when isLeapYear => 29,
+    _ => 28
+};
+
+Console.WriteLine(daysOfMonth);
+```
