--- a/C#/001 : 제어문.md
+++ b/C#/001 : 제어문.md
@@ -104,6 +104,15 @@ Console.WriteLine(grade + "학점입니다.");
 
 <br>   
 
+| switch 문의 기존 키워드     | switch 식의 대체 키워드      |
+|:------------:|:------------:|
+| `case`       | `=>`         |
+| `break`      | `,`          |
+| `default`    | `_`          |
+
+<br>   
+<br>   
+
 <mark> 회원의 포인트(point)를 올바르게 입력받았다. 해당하는 등급(membership)을 출력하려면?</mark>
 
 <mark> (1) 10만점 이상은 VIP. (2) 6만점 이상은 Gold. (3) 3만점 이상은 Silver. (4) 그 외는 Basic. </mark>
@@ -142,3 +151,6 @@ int daysOfMonth = month switch
 
 Console.WriteLine(daysOfMonth);
 ```
+
+<br>   
+
