--- a/C#/제어문/반복문.md
+++ b/C#/제어문/반복문.md
@@ -123,3 +123,55 @@ do
 
 Console.WriteLine("정답입니다!");
 ```
+
+<br>   
+<br>   
+<br>   
+<br>   
+
+## 점프 문
+
+<br>   
+
+<mark>2 이상의 정수 N이 주어졌을 때, N이 소수인지 판별하려면?</mark>
+
+<mark>※ break 문을 이용하면 좋다.</mark>
+
+<br>   
+
+```csharp
+bool isPrime = true;
+
+// 1이 아닌 수로 나누어떨어지면 소수가 아니다.
+
+for (int i = 2; i <= Math.Sqrt(N); i++)
+{
+    if (N % i == 0)
+    {
+        isPrime = false;
+        break;
+    }
+}
+
+if (isPrime)
+    Console.WriteLine("소수입니다.");
+else
+    Console.WriteLine("소수가 아닙니다.");
+```
+
+<br>   
+<br>   
+
+<mark>자연수 M이 주어졌을 때, 1부터 M까지 3의 배수를 제외하고 출력하려면?</mark>
+
+<mark>※ continue 문을 이용하면 좋다.</mark>
+
+```csharp
+for (int i = 1; i <= M; i++)
+{
+    // 3의 배수이면 건너뛴다.
+    if (i % 3 == 0) continue;
+
+    Console.WriteLine(i);
+}
+```
